# logosforge-monorepo

./: .gitattributes  .gitignore  MANUSCRIPT_SYNTAX.md  PRO.md  PRO_COMMENTS_IMPLEMENTATION_PROMPT.md  PRO_IMPORT_BUNDLE_PHASE2_PROMPT.md  PRO_IMPORT_BUNDLE_PHASE3_PROMPT.md  PRO_IMPORT_BUNDLE_PROMPT.md  QUICK_START.md  README.md  USER_GUIDE.md
logosforge/: .gitignore  CHANGELOG.md  CLAUDE.md  LIBRECHAT_INTEGRATION.md  README.md  RELEASE_NOTES_ALPHA.md  pyproject.toml  requirements.txt  run.py
logosforge/docs/: AI_SETUP.md  ALPHA_FINAL_REPORT.md  ALPHA_FREEZE.md  ALPHA_MANUAL_RELEASE_CONFIRMATION.md  ALPHA_MANUAL_SMOKE_TEST.md  ALPHA_NEXT_STEPS.md  ALPHA_RC_CHECKLIST.md  ALPHA_RC_STATUS.md  ALPHA_RELEASE_CHECKLIST.md  ALPHA_RELEASE_GATE_AUDIT.md  ALPHA_SCOPE.md  ALPHA_TEST_COMMANDS.md  ALPHA_TEST_PLAN.md  ALPHA_UI_STABILITY_NOTES.md  API.md  ASSISTANT_BEHAVIOR_MANUAL_TEST.md  AdaptiveRewriteSandbox.md  AutosaveVersioning.md  BackupRestore.md  ContinuityChecks.md  ControlledApply.md  Dashboard.md  DataSafety.md  DecisionRadar.md  Export.md  GRAPHIC_NOVEL_MODE_INTEGRITY_AUDIT.md  Graph.md  GuidedWorkflows.md  Interchange.md  KNOWN_LIMITATIONS_ALPHA.md  LOCAL_LAN_WHISPER.md  LOCAL_WRITER_QA_AGENT_SCRIPT.md  Logos.md  MULTI_MODE_INTEGRITY_AUDIT.md  NarrativeHealth.md  NarrativeKnowledgeGraph.md  PORTING_ARCHITECTURE_ALPHA.md  PRODUCT_ARCHITECTURE_ROADMAP.md  ProductionDrafts.md  ProfessionalScreenplayOutput.md  (+26 more)
logosforge/logosforge/: __init__.py  adaptive_mode.py  analytics.py  app.py  assistant.py  assistant_context_policy.py  assistant_contract.py  auto_link.py  export.py  (+137 more)
(+1055 files in other folders)
